RESOLVED FIXED275047
ScopedClearStencilAndMask is error-prone
https://bugs.webkit.org/show_bug.cgi?id=275047
Summary ScopedClearStencilAndMask is error-prone
Alexey Knyazev
Reported 2024-06-03 02:20:44 PDT
Its constructor accepts the `face` parameter to control which stencil mask to update but its destructor always restores only the front stencil mask.
Attachments
EWS
Comment 1 2024-06-03 05:18:25 PDT
Committed 279646@main (b473b09ff8c0): <https://commits.webkit.org/279646@main> Reviewed commits have been landed. Closing PR #29451 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-06-03 05:19:14 PDT
Note You need to log in before you can comment on or make changes to this bug.