ScopedClearStencilAndMask is error-prone https://bugs.webkit.org/show_bug.cgi?id=275047

Reviewed by Kimmo Kinnunen.

The clear operation always uses the front stencil
write mask when clearing the stencil buffer.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::startFrame):
* Source/WebCore/Modules/webxr/WebXROpaqueFramebufferCocoa.cpp:
(WebCore::WebXROpaqueFramebuffer::startFrame):
* Source/WebCore/html/canvas/WebGLUtilities.h:
(WebCore::ScopedClearStencilAndMask::ScopedClearStencilAndMask):

Canonical link: https://commits.webkit.org/279646@main